testing/framework/resources/Advanced/Failing/mondrian/query15.q
select customer.country as c0, customer.state_province as c1, customer.city as c2, customer.customer_id as c3, fullname as c4, fullname as c5, customer.gender as c6, customer.marital_status as c7, customer.education as c8, customer.yearly_income as c9, store.store_country as c10, store.store_state as c11, store.store_city as c12, store.store_name as c13, store.store_type as c14, store.store_manager as c15, store.store_sqft as c16, store.grocery_sqft as c17, store.frozen_sqft as c18, store.meat_sqft as c19, store.coffee_bar as c20, store.store_street_address as c21, product_class.product_family as c22, product_class.product_department as c23, product_class.product_category as c24, product_class.product_subcategory as c25, product.brand_name as c26, product.product_name as c27 from customer as customer, sales_fact_1997 as sales_fact_1997, store as store, product as product, product_class as product_class where sales_fact_1997.customer_id = customer.customer_id and sales_fact_1997.store_id = store.store_id and product.product_class_id = product_class.product_class_id and sales_fact_1997.product_id = product.product_id group by customer.country, customer.state_province, customer.city, customer.customer_id, fullname, customer.gender, customer.marital_status, customer.education, customer.yearly_income, store.store_country, store.store_state, store.store_city, store.store_name, store.store_type, store.store_manager, store.store_sqft, store.grocery_sqft, store.frozen_sqft, store.meat_sqft, store.coffee_bar, store.store_street_address, product_class.product_family, product_class.product_department, product_class.product_category, product_class.product_subcategory, product.brand_name, product.product_name order by customer.country ASC NULLS LAST, customer.state_province ASC NULLS LAST, customer.city ASC NULLS LAST, fullname ASC NULLS LAST, store.store_country ASC NULLS LAST, store.store_state ASC NULLS LAST, store.store_city ASC NULLS LAST, store.store_name ASC NULLS LAST, product_class.product_family ASC NULLS LAST, product_class.product_department ASC NULLS LAST, product_class.product_category ASC NULLS LAST, product_class.product_subcategory ASC NULLS LAST, product.brand_name ASC NULLS LAST, product.product_name ASC NULLS LAST;
